@@ -1,3 +1,8 @@
+2010-02-10  Richard Sandiford  <r.sandiford@uk.ibm.com>
+
+	* config/tc-ppc.c (md_show_usage): Add -mpwr4, -mpwr5, -mpwr5x,
+	-mpwr6 and -mpwr7.
+
 2010-01-30  Richard Sandiford  <r.sandiford@uk.ibm.com>
 
 	* write.h (fix_at_start): Declare.
